# autofepg

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
autofepg/: __init__.py  builder.py  core.py  engine.py  generators.py  init.py  utils.py
examples/: example_classification.py  example_regression.py
tests/: test_autofepg.py
